<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    tools:context=".ui.historydetails.HistoryDetailsFragment">

    <TextView
        android:id="@+id/textview_carbon_view_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/history_details_initial_date_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_carbon_view_date">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_carbon_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:max="100"
            android:progress="75"
            app:indicatorColor="@color/royal_purple"
            app:indicatorSize="180dp"
            app:trackCornerRadius="5dp"
            app:trackThickness="8dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="75dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/textview_carbon_view_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/initial_carbon_view"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/textview_carbon_view_target_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/initial_carbon_view"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/screen_time_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
        <TextView
            android:id="@+id/textview_screen_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/history_details_screen_time_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/textview_screen_time_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/initial_activity_screen_time_view"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:text="@string/history_details_activities_title"-->
<!--        android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textview_screen_time_view" />-->

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/activity_list"-->
<!--        android:layout_width="345dp"-->
<!--        android:layout_height="265dp"-->
<!--        android:layout_marginTop="1dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->


</androidx.constraintlayout.widget.ConstraintLayout>